_LinkPartialStyle-daki css-lerin yollarini duzeltdim

--- a/ConstructionSite/Views/Shared/_LinkPartialStyle.cshtml
+++ b/ConstructionSite/Views/Shared/_LinkPartialStyle.cshtml
@@ -1,6 +1,6 @@
 ﻿<link rel="stylesheet" type="text/css" href="~/style.css">
-<link href="~/customer/css/myContent.css" rel="stylesheet" type="text/css"/>
-<link href="~/customer/css/Layout.css" rel="stylesheet" type="text/css"/>
+<link href="~/Custom/Css/myContent.css" rel="stylesheet" type="text/css"/>
+<link href="~/Custom/Css/layout.css" rel="stylesheet" type="text/css"/>
 <!-- Favicon and touch icons  -->
-<link rel="shortcut icon" href="~/assets/img/logo-light.png">
-<link rel="apple-touch-icon-precomposed" href="~/assets/icon/apple-touch-icon-158-precomposed.png" />
+<link rel="shortcut icon" href="~/Assets/Img/logo-light.png">
+<link rel="apple-touch-icon-precomposed" href="~/Assets/Icon/apple-touch-icon-158-precomposed.png" />
