--- a/ConstructionSite/Views/Shared/_JavascriptPartial.cshtml
+++ b/ConstructionSite/Views/Shared/_JavascriptPartial.cshtml
@@ -1,11 +1,11 @@
-﻿<script type="text/javascript" src="~/assets/js/jquery.min.js"></script>
-<script type="text/javascript" src="~/lib/bootstrap-v4-rtl/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="~/assets/js/animsition.js"></script>
-<script type="text/javascript" src="~/assets/js/plugins.js"></script>
-<script type="text/javascript" src="~/assets/js/countTo.js"></script>
-<script type="text/javascript" src="~/assets/js/fitText.js"></script>
-<script type="text/javascript" src="~/assets/js/flexslider.js"></script>
-<script type="text/javascript" src="~/lib/vegas/vegas.min.js"></script>
-<script type="text/javascript" src="~/assets/js/owlCarousel.js"></script>
-<script type="text/javascript" src="~/assets/js/cube.portfolio.js"></script>
-<script type="text/javascript" src="~/assets/js/main.js"></script>
+﻿<script type="text/javascript" src="~/Assets/Js/jquery.min.js"></script>
+<script type="text/javascript" src="~/Lib/bootstrap-v4-rtl/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="~/Assets/Js/animsition.js"></script>
+<script type="text/javascript" src="~/Assets/Js/plugins.js"></script>
+<script type="text/javascript" src="~/Assets/Js/countTo.js"></script>
+<script type="text/javascript" src="~/Assets/Js/fitText.js"></script>
+<script type="text/javascript" src="~/Assets/Js/flexslider.js"></script>
+<script type="text/javascript" src="~/Lib/vegas/vegas.min.js"></script>
+<script type="text/javascript" src="~/Assets/Js/owlCarousel.js"></script>
+<script type="text/javascript" src="~/Assets/Js/cube.portfolio.js"></script>
+<script type="text/javascript" src="~/Assets/Js/main.js"></script>
