--- a/ConstructionSite/Views/Shared/_RevolutionPartialScripts.cshtml
+++ b/ConstructionSite/Views/Shared/_RevolutionPartialScripts.cshtml
@@ -1,3 +1,3 @@
-﻿<script type="text/javascript" src="~/includes/rev-slider/js/jquery.themepunch.tools.min.js"></script>
-<script type="text/javascript" src="~/includes/rev-slider/js/jquery.themepunch.revolution.min.js"></script>
-<script type="text/javascript" src="~/assets/js/rev-slider.js"></script>
+﻿<script type="text/javascript" src="~/Includes/Rev-slider/Js/jquery.themepunch.tools.min.js"></script>
+<script type="text/javascript" src="~/Includes/Rev-slider/Js/jquery.themepunch.revolution.min.js"></script>
+<script type="text/javascript" src="~/Assets/Js/rev-slider.js"></script>
