Layout-un ichindeki faylin yollarini duzgun qeyd etdim

--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -88,7 +88,7 @@
 
     <!-- Revolution Slider -->
     <partial name="_RevolutionPartialScripts" />
-    <script type="text/javascript" src="~/customer/js/Component.js"
+    <script type="text/javascript" src="~/Custom/Js/component.js"
             asp-append-version="true">
     </script>
    
