--- a/ConstructionSite/Views/Shared/_HeaderPartial.cshtml
+++ b/ConstructionSite/Views/Shared/_HeaderPartial.cshtml
@@ -1,5 +1,25 @@
-﻿
-<header id="site-header" class="header-front-page style-5">
+﻿<header id="site-header" class="header-front-page style-5">
+    <div id="site-header-inner" class="container" style="padding: 18px 15px;">
+        <div class="wrap-inner">
+            <div id="site-logo" class="clearfix" style="width: 50%;display: inline-block;">
+                <div id="site-logo-inner">
+                    <a asp-controller="Home" asp-action="Index" title="Construction" rel="home" class="main-logo">
+                        <img src="~/assets/img/logo-light.png" alt="Construction" data-width="204" data-height="30" style="width: 94px; height: 54px; top: 0px;  background-color: white;">
+                    </a>
+                </div>
+
+            </div>
+           
+
+            <div class="mobile-button"><span></span></div>
+            
+
+            <partial name="_MainnavPartial" />
+        </div>
+       
+    </div>
+</header>
+<!--<header id="site-header" class="header-front-page style-5">
     <div id="site-header-inner" class="container">
         <div class="wrap-inner">
             <div id="site-logo" class="clearfix">
@@ -8,14 +28,14 @@
                         <img class="logo_image" src="~/assets/img/logo-light.png" alt="Construction" data-width="204" data-height="30">
                     </a>
                 </div>
-            </div>
+            </div>-->
             <!-- /#site-logo -->
 
-            <div class="mobile-button"><span></span></div>
+            <!--<div class="mobile-button"><span></span></div>-->
             <!-- //mobile menu button -->
 
-            <partial name="_MainnavPartial" />
-        </div>
+            <!--<partial name="_MainnavPartial" />
+        </div>-->
         <!-- /#site-header-inner -->
-    </div>
-</header>
+    <!--</div>
+</header>-->
