--- a/ConstructionSite/Views/Shared/_LinkPartialStyle.cshtml
+++ b/ConstructionSite/Views/Shared/_LinkPartialStyle.cshtml
@@ -4,3 +4,7 @@
 <!-- Favicon and touch icons  -->
 <link rel="shortcut icon" href="~/assets/img/logo-light.png">
 <link rel="apple-touch-icon-precomposed" href="~/assets/icon/apple-touch-icon-158-precomposed.png" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<link rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
