--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -15,8 +15,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
     <!-- Theme Style -->
-
     <partial name="_LinkPartialStyle" />
+    <!-- Theme Style -->
     @RenderSection("head", false)
     @*<link href="~/customer/css/icon.css" rel="stylesheet" />*@
 </head>
@@ -28,27 +28,7 @@
             <div id="site-header-wrap">
                 <!-- Header -->
                 <partial name="_HeaderPartial" />
-                @*<header id="site-header" class="header-front-page style-5">
-                    <div id="site-header-inner" class="container" style="padding: 18px 15px;">
-                        <div class="wrap-inner">
-                            <div id="site-logo" class="clearfix" style="width: 50%;display: inline-block;">
-                                <div id="site-logo-inner">
-            <a asp-controller="Home" asp-action="Index" title="Construction" rel="home" class="main-logo">
-                <img src="~/assets/img/logo-light.png" alt="Construction" data-width="204" data-height="30" style="width: 94px; height: 54px; top: 0px;  background-color: white;">
-            </a>
-        </div>
-                                
-                            </div>
-                             /#site-logo 
 
-                            <div class="mobile-button"><span></span></div>
-                             //mobile menu button 
-
-                            <partial name="_MainnavPartial" />
-                        </div>
-                         /#site-header-inner 
-                    </div>
-                </header>*@
                 <!-- /#site-header -->
             </div>
 
@@ -68,9 +48,7 @@
             <!-- Bottom -->
             <partial name="_BottonPartial" />
         </div>
-        <!-- /#page -->
     </div>
-    <!-- /#wrapper -->
 
     <a id="scroll-top"><i class="fa fa-arrow-up" style="font-size: 1.9em; margin-top: 22%;"></i></a>
 
