--- a/ConstructionSite/Views/Shared/_MainnavPartial.cshtml
+++ b/ConstructionSite/Views/Shared/_MainnavPartial.cshtml
@@ -20,7 +20,7 @@
 
         <li class="@Html.Active("Home","Index")"><a asp-controller="Home" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Home)</a></li>
         <li class="@Html.Active("About","Index")"><a asp-controller="About" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.About)</a></li>
-        <li class="@Html.Active("Services","Index")">
+        <li class="@Html.Active("Services","Index") menu-item menu-item-has-children">
             <a href="/Services/Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Services)</a>
             @await Component.InvokeAsync("ServiceMenu")
         </li>
@@ -28,14 +28,15 @@
         <li class="@Html.Active("Portfolio","Index")"><a asp-controller="Portfolio" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Portfolio)</a></li>
         <li class="@Html.Active("Blog","Index")"><a asp-controller="Blog" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Blog)</a></li>
         <li class="@Html.Active("Message","Index")"><a asp-controller="Message" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Contact)</a></li>
-
-        @foreach (var item in cultureItems)
-        {
-            <li id="@item.Name" class="langss" data-name="@item.Name" data-id="@item.Name">
-                <a class="datas_item langdata" data-id="@item.Name">
-                    <input class="contexts" type="hidden" data-id="@Context.Request.Path" />@item.NativeName.Substring(0, 2).ToUpper()
-                </a>
-            </li>
-        }
+        @*<div class="langu" style="display: flex;">
+            @foreach (var item in cultureItems)
+            {
+                <li id="@item.Name" class="langss" data-name="@item.Name" data-id="@item.Name">
+                    <a class="datas_item langdata" data-id="@item.Name">
+                        <input class="contexts" type="hidden" data-id="@Context.Request.Path" />@item.NativeName.Substring(0, 2).ToUpper()
+                    </a>
+                </li>
+            }
+        </div>*@
     </ul>
 </nav>
