Finsihed_All_Css

--- a/ConstructionSite/Views/Shared/_LinkPartialStyle.cshtml
+++ b/ConstructionSite/Views/Shared/_LinkPartialStyle.cshtml
@@ -8,3 +8,4 @@
 
 <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
+<link rel="stylesheet" type="text/css" href="~/Custom.css"/>
