--- a/ConstructionSite/Views/Shared/_HeaderPartial.cshtml
+++ b/ConstructionSite/Views/Shared/_HeaderPartial.cshtml
@@ -4,7 +4,7 @@
             <div id="site-logo" class="clearfix">
                 <div id="site-logo-inner">
                     <a asp-controller="Home" asp-action="Index" title="Construction" rel="home" class="main-logo">
-                        <img src="~/assets/img/logo-light.png" alt="Construction" data-width="204" data-height="30" style=" position: absolute; width: 110px; height: 68px; top: -8px;  background-color: white;">
+                        <img src="~/Assets/Img/logo-light.png" alt="Construction" data-width="204" data-height="30" style=" position: absolute; width: 110px; height: 68px; top: -8px;  background-color: white;">
                     </a>
                 </div>
             </div>
