cshtml file-larinin ichindeki yollari css ve ya js-ler uchun qaydaya saldim

--- a/ConstructionSite/Views/Shared/_MainnavPartial.cshtml
+++ b/ConstructionSite/Views/Shared/_MainnavPartial.cshtml
@@ -38,4 +38,4 @@
     </ul>
 </nav>
 <script src="~/ConstructionAdmin/js/jquery-1.8.3.min.js"></script>
-<script src="~/Custom/Js/Language.js"></script>
+<script src="~/Custom/Js/language.js"></script>
