--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                             <div id="site-logo" class="clearfix">
                                 <div id="site-logo-inner">
                                     <a asp-controller="Home" asp-action="Index" title="Construction" rel="home" class="main-logo">
-                                        <img src="~/Assets/Img/logo-light.png" alt="Construction"  data-width="204" data-height="30" style=" position: absolute; width: 110px; height: 68px; top: 0px;  background-color: white;">
+                                        <img src="~/Assets/Img/logo-light.png" alt="Construction"  data-width="204" data-height="30" style=" position: absolute; width: 120px; height: 100px; top: -15px; background-color: white;" width="204" height="30">
                                     </a>
                                 </div>
                             </div>
