--- a/ConstructionSite/Views/Blog/Index.cshtml
+++ b/ConstructionSite/Views/Blog/Index.cshtml
@@ -7,6 +7,7 @@
 <!-- Main Content -->
 <div id="main-content" class="site-main center clearfix">
     <div id="content-wrap" class="container">
+        <div style="text-align: center; font-size:36px">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.News)</div>
         <div id="site-content" class="site-content clearfix" style="width: 100%">
             <div id="inner-content" class="inner-content-wrap">
                 @foreach (var item in Model.Paging)
