--- a/ConstructionSite/Views/Shared/_LinkPartialStyle.cshtml
+++ b/ConstructionSite/Views/Shared/_LinkPartialStyle.cshtml
@@ -4,3 +4,4 @@
 <!-- Favicon and touch icons  -->
 <link rel="shortcut icon" href="~/Assets/Img/logo-light.png">
 <link rel="apple-touch-icon-precomposed" href="~/Assets/Icon/apple-touch-icon-158-precomposed.png" />
+<link rel="stylesheet" type="text/css" href="~/custom.css" />
