--- a/ConstructionSite/Views/Portfolio/Project.cshtml
+++ b/ConstructionSite/Views/Portfolio/Project.cshtml
@@ -9,7 +9,7 @@
                     <div class="inner">
                         <div class="grid">
                             <figure class="effect-zoe">
-                                <img src="@item.Image" alt="custom alt 3" class="imagest" />
+                                <img src="@item.Image" alt="custom alt 3" class="imagest animate__animated animate__zoomIn "  />
                                 <figcaption>
                                     <div>
                                         <p>@item.Name</p>
