--- a/ConstructionSite/Views/Services/Services.cshtml
+++ b/ConstructionSite/Views/Services/Services.cshtml
@@ -7,7 +7,8 @@
             <div id="inner-content" class="inner-content-wrap">
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="wprt-spacer" data-desktop="80" data-mobi="40" data-smobi="40" style="height:80px"></div>
+                        <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40"></div>
+                        <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40"></div>
                         <h3 class="line-height-normal margin-bottom-10">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.WhatIsIncluded)</h3>
                         <div class="wprt-lines style-1 custom-3">
                             <div class="line-1"></div>
