--- a/ConstructionSite/wwwroot/assets/css/custom.css
+++ b/ConstructionSite/wwwroot/assets/css/custom.css
@@ -1,6 +1,4 @@
-﻿
-
-.effect-zoes .hoverDiv {
+﻿.effect-zoes .hoverDiv {
     position: absolute !important;
     bottom: -75px !important;
     left: 0 !important;
