Contact-daki xeritenin id-sini deyishdim, ve yuxaridan boshluq div-lerini elave etdim

--- a/ConstructionSite/Views/Message/Index.cshtml
+++ b/ConstructionSite/Views/Message/Index.cshtml
@@ -13,12 +13,14 @@
 
 <div id="main-content" class="site-main clearfix">
     <div id="content-wrap">
+        <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40" style="height:100px"></div>
+        <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40" style="height:100px"></div>
         <h1 class="featured-title-heading" style="text-align: center;">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.ContactUs)</h1>
         <div id="site-content" class="site-content clearfix">
             <div id="inner-content" class="inner-content-wrap">
                 <div class="page-content">
                     <section class="wprt-section">
-                        <div id="gmap" class="wprt-map-1"></div>
+                        <div id="map" class="wprt-map-1"></div>
                         <div class="wprt-spacer" data-desktop="100" data-mobi="60" data-smobi="60"></div>
 
                         <div class="container">
