Home-da Slider-in sheklinin yolunu duzeltdim

--- a/ConstructionSite/Views/Home/Index.cshtml
+++ b/ConstructionSite/Views/Home/Index.cshtml
@@ -77,7 +77,7 @@
             <li data-transition="boxfade" data-slotamount="7" data-easein="Expo.easeOut" data-easeout="Expo.easeOut" data-masterspeed="2000" data-thumb="assets/img/slider/2.jpg" data-rotate="0" data-saveperformance="off" data-title="BEST COMPANY">
 
                 <!-- Main Image -->
-                <img src="~/assets/img/slider/2.jpg" alt="" data-bgposition="center center" data-no-retina>
+                <img src="~/Assets/Img/slider/2.jpg" alt="" data-bgposition="center center" data-no-retina>
 
                 <!-- Layers -->
                 <div class="tp-caption tp-resizeme text-white font-family-heading text-shadow font-weight-500"
