--- a/ConstructionSite/Views/Shared/Components/About/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/About/Default.cshtml
@@ -10,21 +10,17 @@
                 <div class="wprt-lines style-2 custom-1">
                     <div class="line-1"></div>
                 </div>
-
                 <div class="wprt-spacer" data-desktop="36" data-mobi="30" data-smobi="30" style="height:36px"></div>
-
                 <p class="wprt-subtitle">@Model.Tittle</p>
                 <div class="link">  <a asp-controller="About" asp-action="Index" class="wprt-button small rounded-3px">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.ReadMore)</a></div>
-
-                <div class="wprt-spacer" data-desktop="40" data-mobi="30" data-smobi="30" style="height:40px"></div>
-
-                <div class="text-center">
-                    <img src="@Model.Image" alt="image" class="image-style">
-                </div>
+                <div class="wprt-spacer" data-desktop="40" data-mobi="30" data-smobi="30" style="height: 120px;"></div>
             </div>
             <!-- /.col-md-12 -->
+
         </div>
         <!-- /.row -->
+
     </div>
     <!-- /.container -->
+
 </section>
