--- a/ConstructionSite/Views/Portfolio/Project.cshtml
+++ b/ConstructionSite/Views/Portfolio/Project.cshtml
@@ -3,7 +3,7 @@
     <div class="row">
         @foreach (var item in Model)
         {
-            <div class="col-md-3 effect-zoes" style="padding:0px !important; height: 225px; margin-left:-1px;">
+            <div class="col-md-3 effect-zoes" style="padding:0px !important; height: 225px;">
                 <a style="display:block" href="/Portfolio/Detail/@item.Id" title="custom title 3">
                     <img src="@item.Image" alt="custom alt 3" class="imagest animate__animated animate__zoomIn" style="width:100%; height:225px;" />
 
