--- a/ConstructionSite/wwwroot/Custom/css/portfolio.css
+++ b/ConstructionSite/wwwroot/Custom/css/portfolio.css
@@ -1,4 +1,24 @@
-﻿.effect-zoes .hoverDiv {
+﻿.langu li a {
+    color: #fff;
+    margin-left: 10px;
+}
+
+.langu li {
+    margin-top: 12px !important;
+}
+
+@media only screen and (max-width: 990px) {
+    .langu li a {
+        text-align: center;
+        margin-left: 20px;
+    }
+}
+
+#main-nav-mobi .menu-item-has-children .arrow:before {
+    content: "\f105";
+    color: #aaa;
+}
+.effect-zoes .hoverDiv {
     position: absolute !important;
     bottom: -75px !important;
     left: 0 !important;
@@ -9,15 +29,14 @@
     visibility: hidden;
 }
 
-.effect-zoes:hover .hoverDiv{
-    bottom:0px !important;
-    visibility:visible;
+.effect-zoes:hover .hoverDiv {
+    bottom: 0px !important;
+    visibility: visible;
 }
 
 .effect-zoes .hoverDiv p {
     text-transform: uppercase !important;
-    transition:0.5s;
-   
+    transition: 0.5s;
 }
 
     .effect-zoes .hoverDiv p:hover {
