--- a/ConstructionSite/Views/About/Index.cshtml
+++ b/ConstructionSite/Views/About/Index.cshtml
@@ -17,6 +17,7 @@
                                 <div class="col-md-12">
                                     <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40" style="height:100px"></div>
                                     <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40" style="height:100px"></div>
+                                    <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40" style="height:100px"></div>
                                     <h2 class="text-center margin-bottom-20">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.OurHistoryAndFacts)</h2>
                                     <div class="wprt-lines style-2 custom-1">
                                         <div class="line-1"></div>
