--- a/ConstructionSite/Views/Shared/_HeaderPartial.cshtml
+++ b/ConstructionSite/Views/Shared/_HeaderPartial.cshtml
@@ -1,10 +1,10 @@
-﻿<header id="site-header" class="header-front-page style-5">
+﻿<header id="site-header" class="header-front-page style-5" style="height:86.9px">
     <div id="site-header-inner" class="container" style="padding: 18px 15px;">
         <div class="wrap-inner">
             <div id="site-logo" class="clearfix" style="width: 50%;display: inline-block;">
                 <div id="site-logo-inner">
                     <a asp-controller="Home" asp-action="Index" title="Construction" rel="home" class="main-logo">
-                        <img src="~/Assets/Img/logo-light.png" alt="Construction" data-width="204" data-height="30" style=" position: absolute; width: 120px; height: 100px; top: -11px;  background-color: white;">
+                        <img src="~/Assets/Img/logo-light.png" alt="Construction" data-width="204" data-height="30" style=" position: absolute; width: 120px; height: 100%; top: 0px;  background-color: white;">
                     </a>
                 </div>
             </div>
