Blog_Deatil_Modifay

--- a/ConstructionSite/Views/Blog/Detail.cshtml
+++ b/ConstructionSite/Views/Blog/Detail.cshtml
@@ -4,6 +4,13 @@
 <div id="main-content" class="site-main center clearfix">
     <div id="content-wrap" class="container">
         <div id="site-content" class="site-content clearfix" style="width: 100%">
+            <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40" style="height:100px"></div>
+            <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40" style="height:100px"></div>
+            <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40" style="height:100px"></div>
+            @*<div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40" style="height:100px"></div>
+        <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40" style="height:100px"></div>
+        <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40" style="height:100px"></div>
+        <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40" style="height:100px"></div>*@
             <div id="inner-content" class="inner-content-wrap">
                 <article class="hentry">
                     <div class="post-media clearfix">
