--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -1,6 +1,5 @@
-﻿@inject SharedLocalizationService Localizer
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
+@inject SharedLocalizationService Localizer
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en-US">
 
 <head>
