Portfolio/Detail-deki  bashliq hissenin olchusunu artirdim

--- a/ConstructionSite/Views/Portfolio/Detail.cshtml
+++ b/ConstructionSite/Views/Portfolio/Detail.cshtml
@@ -20,7 +20,9 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-12">
-                                    <div class="wprt-spacer" data-desktop="80" data-mobi="40" data-smobi="40"></div>
+                                    <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40" style="height:100px"></div>
+                                    <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40" style="height:100px"></div>
+                                    <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40" style="height:100px"></div>
                                 </div>
                                 <!-- /.col-md-12 -->
 
