--- a/ConstructionSite/wwwroot/style.css
+++ b/ConstructionSite/wwwroot/style.css
@@ -7,9 +7,10 @@
  * Theme URI: http://www.blogwp.com/construction
  * Author URI: http://www.blogwp.com
  */
+
 @import url("https://fonts.googleapis.com/css?family=Lato:400,400i|Montserrat:300,400,500,600,700&subset=latin");
 
-@import "Lib/bootstrap-v4-rtl/css/bootstrap.css";
+@import "Assets/Css/bootstrap.min.css";
 @import "Assets/Css/animsition.css";
 @import "Assets/Css/animate.css";
 @import "Assets/Css/fontello.css";
@@ -17,9 +18,9 @@
 @import "Assets/Css/cubeportfolio.min.css";
 @import "Assets/Css/magnific-popup.css";
 @import "Assets/Css/flexslider.css";
-@import "Lib/vegas/vegas.css";
+@import "Assets/Css/vegas.css";
 @import "Assets/Css/owl.carousel.css";
-@import "Includes/Rev-slider/Css/settings.css";
+@import "Includes/Rev-slider/css/settings.css";
 @import "Includes/Rev-slider/Css/layers.css";
 @import "Includes/Rev-slider/Css/navigation.css";
 @import "Assets/Css/woocommerce.css";
@@ -47,21 +48,10 @@
  * Media Queries
  * Retina Devices
  */
+
 /* Reset Browsers
 -------------------------------------------------------------- */
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	outline: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-	font-family: inherit;
-	font-size: 100%;
-	font-style: inherit;
-	font-weight: inherit;
-}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}html{font-size:62.5%;overflow-y:scroll;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;}*,*:before,*:after{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;}body{background:#fff;line-height:1;}article,aside,details,figcaption,figure,footer,header,main,nav,section{display:block}ol,ul{list-style:none}table{border-collapse:collapse;border-spacing:0;}caption,th,td{font-weight:normal;text-align:left;}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none;}blockquote,q{quotes:none}a:focus{outline:none}a:hover,a:active{outline:0}a img{border:0}img{max-width:100%;height:auto;}select{max-width:100%}
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;outline:0;font-size:100%;font:inherit;vertical-align:baseline;font-family:inherit;font-size:100%;font-style:inherit;font-weight:inherit;}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}html{font-size:62.5%;overflow-y:scroll;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;}*,*:before,*:after{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;}body{background:#fff;line-height:1;}article,aside,details,figcaption,figure,footer,header,main,nav,section{display:block}ol,ul{list-style:none}table{border-collapse:collapse;border-spacing:0;}caption,th,td{font-weight:normal;text-align:left;}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none;}blockquote,q{quotes:none}a:focus{outline:none}a:hover,a:active{outline:0}a img{border:0}img{max-width:100%;height:auto;}select{max-width:100%}
 
 /* General
 -------------------------------------------------------------- */
@@ -70,7 +60,7 @@ button,
 input,
 select,
 textarea { font-family: "Lato", sans-serif; color: #777; font-size: 14px; line-height: 1.875; background-color: #fff; -webkit-font-smoothing: antialiased; }
-img { height: auto; max-width: 100%;vertical-align: middle; -ms-interpolation-mode: bicubic }
+img { height: auto; max-width: 100%; vertical-align: middle; -ms-interpolation-mode: bicubic }
 p { margin: 0 0 20px; }
 strong,
 b { font-weight: bold; }
@@ -294,11 +284,6 @@ h4 a:hover,
 h5 a:hover,
 h6 a:hover { text-decoration: none }
 
-.hoverDiv p {
-	font-size: 17px;
-	margin: 0px !important;
-}
-
 .text-accent-color { color: #ffc925 !important; }
 .text-white { color: #fff !important; }
 .text-grey { color: #aeaeae !important; }
@@ -446,7 +431,7 @@ p.dropcap span.first-letter { font-size: 55px; float: left; color: #ffc925; text
 
 /* Sidebar Right (default) */
 #site-content { float: left; width: 70% } /* 300px on 1170px grid */
-#sidebar { float: right; width: 25.7% } /* 300px on 1170px grid */
+#sidebar { float: left; width: 25.7% } /* 300px on 1170px grid */
 
 /* Sidebar Left */
 .sidebar-left #site-content { float: right; }
@@ -620,8 +605,9 @@ p.dropcap span.first-letter { font-size: 55px; float: left; color: #ffc925; text
 /* Header
 -------------------------------------------------------------- */
 #site-header { position: relative; background-color: #fff; }
-#site-header-inner { position: relative; padding-top: 30px; padding-bottom: 30px; height: 100%; }
-#site-logo .site-logo-text { color: #252525; font-size: 22px; line-height: 34px; font-weight: 700; }
+#site-header-inner { position: relative; padding-top: 30px; padding-bottom: 55px; height: 100%; }
+#site-logo { float: left; }
+#site-logo .site-logo-text { color: #f1f1f1; font-size: 22px; line-height: 34px; font-weight: 700; }
 #site-logo .site-logo-text:hover { color: #ffc925; }
 
 .menu-has-search #site-header.style-1 #main-nav,
@@ -757,7 +743,7 @@ color: #252525; font-family: "Montserrat", sans-serif; font-size: 1.071em; font-
 #main-nav .menu-fallback { position: relative; color: #252525; text-decoration: underline; display: inline-block; height: 50px; line-height: 50px; }
 #main-nav { display: block; }
 #main-nav ul { margin: 0; }
-#main-nav ul li { position: relative; list-style: none; padding-top: 0; padding-bottom: 0; }
+#main-nav ul li { position: relative; list-style: none; padding-top: 0; padding-bottom: 0; padding-left:4px; }
 #main-nav > ul > li { float: left; padding: 0 18px; }
 #main-nav > ul > li:first-child { padding-left: 0; }
 #main-nav > ul > li > a { display: block; font-family: "Montserrat", sans-serif; font-size: 13px; font-weight: 500; color: #777; text-transform: uppercase; }
@@ -802,251 +788,66 @@ color: #252525; font-family: "Montserrat", sans-serif; font-size: 1.071em; font-
 #site-header.is-sticky:after {  opacity: 0.8; }
 
 /* Sub Menu */
-#main-nav .sub-menu {
-	position: absolute;
-	left: 0;
-	top: 100%;
-	width: 220px;
-	filter: alpha(opacity=0);
-	opacity: 0;
-	visibility: hidden;
-	z-index: 9999;
-	-webkit-transition: all ease .238s;
-	-moz-transition: all ease .238s;
-	transition: all ease .238s;
-	-webkit-transform: translateY(3px);
-	-moz-transform: translateY(3px);
-	transform: translateY(3px);
+#main-nav .sub-menu { position: absolute; left: 0; top: 100%; width: 220px; filter: alpha(opacity=0); opacity: 0; visibility: hidden; z-index: 9999;
+    -webkit-transition: all ease .238s; -moz-transition: all ease .238s; transition: all ease .238s;
+    -webkit-transform: translateY(3px); -moz-transform: translateY(3px); transform: translateY(3px);
 	-webkit-box-shadow: inset 0 12px 19px rgba(255,255,255,0.1), 0 1px 7px rgba(0,0,0,0.2);
-	-moz-box-shadow: inset 0 12px 19px rgba(255,255,255,0.1), 0 1px 7px rgba(0,0,0,0.2);
-	box-shadow: inset 0 12px 19px rgba(255,255,255,0.1), 0 1px 7px rgba(0,0,0,0.2);
+	   -moz-box-shadow: inset 0 12px 19px rgba(255,255,255,0.1), 0 1px 7px rgba(0,0,0,0.2);
+	        box-shadow: inset 0 12px 19px rgba(255,255,255,0.1), 0 1px 7px rgba(0,0,0,0.2);
 }
 
-	#main-nav .sub-menu li a {
-		background-color: #fff;
-		color: #252525;
-		font-size: 0.928em;
-		font-family: "Montserrat", sans-serif;
-		font-weight: 500;
-		display: block;
-		text-transform: uppercase;
-		word-break: break-all;
-		border-top: 1px solid #eaeaea;
-		padding: 10px 19px;
-		line-height: 24px;
-	}
-
-	#main-nav .sub-menu li:first-child a {
-		border-top: 0;
-	}
-
-	#main-nav .sub-menu li a:hover {
-		color: #ffc925;
-	}
-
-#main-nav li:hover > .sub-menu {
-	filter: alpha(opacity=100);
-	opacity: 1;
-	visibility: visible;
-	-webkit-transition: all ease .238s;
-	-moz-transition: all ease .238s;
-	transition: all ease .238s;
-	-webkit-transform: translateX(0px);
-	-moz-transform: translateX(0px);
-	transform: translateX(0px);
+#main-nav .sub-menu li a { background-color: #fff; color: #252525; font-size: 0.928em; font-family: "Montserrat", sans-serif; font-weight: 500; display: block; text-transform: uppercase;word-break: break-all; border-top: 1px solid #eaeaea; padding: 10px 19px; line-height: 24px; }
+#main-nav .sub-menu li:first-child a { border-top: 0; }
+#main-nav .sub-menu li a:hover { color: #ffc925; }
+#main-nav li:hover > .sub-menu { filter: alpha(opacity=100); opacity: 1; visibility: visible;
+    -webkit-transition: all ease .238s; -moz-transition: all ease .238s; transition: all ease .238s;
+    -webkit-transform: translateX(0px); -moz-transform: translateX(0px); transform: translateX(0px);
 }
 
 
-#main-nav .sub-menu2 {
-	position: absolute;
-	left: 220px;
-	top: 0px;
-	width: 220px;
-	filter: alpha(opacity=0);
-	opacity: 0;
-	visibility: hidden;
-	z-index: 9999;
-	-webkit-transition: all ease .238s;
-	-moz-transition: all ease .238s;
-	transition: all ease .238s;
-	-webkit-transform: translateY(3px);
-	-moz-transform: translateY(3px);
-	transform: translateY(3px);
+#main-nav .sub-menu2 { position: absolute; left: 220px; top: 0px; width: 220px; filter: alpha(opacity=0); opacity: 0; visibility: hidden; z-index: 9999;
+    -webkit-transition: all ease .238s; -moz-transition: all ease .238s; transition: all ease .238s;
+    -webkit-transform: translateY(3px); -moz-transform: translateY(3px); transform: translateY(3px);
 	-webkit-box-shadow: inset 0 12px 19px rgba(255,255,255,0.1), 0 1px 7px rgba(0,0,0,0.2);
-	-moz-box-shadow: inset 0 12px 19px rgba(255,255,255,0.1), 0 1px 7px rgba(0,0,0,0.2);
-	box-shadow: inset 0 12px 19px rgba(255,255,255,0.1), 0 1px 7px rgba(0,0,0,0.2);
+	   -moz-box-shadow: inset 0 12px 19px rgba(255,255,255,0.1), 0 1px 7px rgba(0,0,0,0.2);
+	        box-shadow: inset 0 12px 19px rgba(255,255,255,0.1), 0 1px 7px rgba(0,0,0,0.2);
 }
 
-	#main-nav .sub-menu2 li a {
-		word-break: break-all;
-		background-color: #fff;
-		color: #252525;
-		font-size: 0.928em;
-		font-family: "Montserrat", sans-serif;
-		font-weight: 500;
-		display: block;
-		text-transform: uppercase;
-		border-top: 1px solid #eaeaea !important;
-		padding: 10px 19px;
-		line-height: 24px;
-	}
-
-	#main-nav .sub-menu2 li:first-child a {
-		border-top: 0;
-	}
-
-	#main-nav .sub-menu2 li a:hover {
-		color: #ffc925;
-	}
-
-#main-nav li:hover > .sub-menu2 {
-	filter: alpha(opacity=100);
-	opacity: 1;
-	visibility: visible;
-	-webkit-transition: all ease .238s;
-	-moz-transition: all ease .238s;
-	transition: all ease .238s;
-	-webkit-transform: translateX(0px);
-	-moz-transform: translateX(0px);
-	transform: translateX(0px);
+#main-nav .sub-menu2 li a {word-break: break-all; background-color: #fff; color: #252525; font-size: 0.928em; font-family: "Montserrat", sans-serif; font-weight: 500; display: block; text-transform: uppercase; border-top: 1px solid #eaeaea !important; padding: 10px 19px; line-height: 24px; }
+#main-nav .sub-menu2 li:first-child a { border-top: 0; }
+#main-nav .sub-menu2 li a:hover { color: #ffc925; }
+#main-nav li:hover > .sub-menu2 { filter: alpha(opacity=100); opacity: 1; visibility: visible;
+    -webkit-transition: all ease .238s; -moz-transition: all ease .238s; transition: all ease .238s;
+    -webkit-transform: translateX(0px); -moz-transform: translateX(0px); transform: translateX(0px);
 }
 
 
 /* Mobile Navigation */
-#main-nav-mobi {
-	display: block;
-	margin: 0 auto;
-	width: 100%;
-	position: absolute;
-	left: 0;
-	top: 100%;
-	z-index: 99999;
-	background-color: #262626;
-}
+#main-nav-mobi { display: block; margin: 0 auto; width: 100%; position: absolute; left: 0; top: 100%; z-index: 99999; background-color: #262626; }
+#main-nav-mobi ul { display: block; list-style: none; margin: 0; padding: 0; }
+#main-nav-mobi ul li { margin:0; position: relative; text-align: center; cursor: pointer; border-top: 1px solid #333; padding-top: 0; padding-bottom: 0; }
+#main-nav-mobi ul > li > a { color: #777; display: inline-block; font-family: "Montserrat", sans-serif; font-size: 14px; text-transform: uppercase; line-height: 50px; text-decoration: none; }
+#main-nav-mobi ul > li > a:hover { color: #ffc925; }
+#main-nav-mobi .menu-item-has-children .arrow { cursor: pointer; display: inline-block; font-family: "FontAwesome"; font-size: 20px; line-height: 50px; position: absolute; right: 0; text-align: center; top: 0; width: 50px; }
 
-	#main-nav-mobi ul {
-		display: block;
-		list-style: none;
-		margin: 0;
-		padding: 0;
-	}
-
-		#main-nav-mobi ul li {
-			margin: 0;
-			position: relative;
-			text-align: center;
-			cursor: pointer;
-			border-top: 1px solid #333;
-			padding-top: 0;
-			padding-bottom: 0;
-		}
-
-		#main-nav-mobi ul > li > a {
-			color: #777;
-			display: inline-block;
-			font-family: "Montserrat", sans-serif;
-			font-size: 14px;
-			text-transform: uppercase;
-			line-height: 50px;
-			text-decoration: none;
-		}
-
-			#main-nav-mobi ul > li > a:hover {
-				color: #ffc925;
-			}
-
-	#main-nav-mobi .menu-item-has-children .arrow {
-		cursor: pointer;
-		display: inline-block;
-		font-family: "FontAwesome";
-		font-size: 20px;
-		line-height: 50px;
-		position: absolute;
-		right: 0;
-		text-align: center;
-		top: 0;
-		width: 50px;
-	}
-/*#main-nav-mobi .menu-item-has-children .arrow:before { content: "\f105"; color: #aaa; }
+#main-nav-mobi .menu-item-has-children .arrow:before { content: "\f105"; color: #aaa; }
 #main-nav-mobi .menu-item-has-children .arrow.active:before { content: "\f107"; }
 #main-nav-mobi ul ul li { background-color: #292929; }
-#main-nav-mobi ul ul ul li { background-color: #323232; }*/
+#main-nav-mobi ul ul ul li { background-color: #323232; }
 
 /* Mobile Menu Button */
-.mobile-button {
-	display: none;
-	float: right;
-	position: relative;
-	background: transparent;
-	cursor: pointer;
-	margin-top: 20px;
-	width: 26px;
-	height: 16px;
-	-webkit-transition: all ease .238s;
-	-moz-transition: all ease .238s;
-	transition: all ease .238s;
-}
-
-	.mobile-button:before,
-	.mobile-button:after,
-	.mobile-button span {
-		background-color: #222;
-		-webkit-transition: all ease .238s;
-		-moz-transition: all ease .238s;
-		transition: all ease .238s;
-	}
-
-	.mobile-button:before,
-	.mobile-button:after {
-		content: '';
-		position: absolute;
-		top: 0;
-		height: 3px;
-		width: 100%;
-		left: 0;
-		top: 50%;
-		-webkit-transform-origin: 50% 50%;
-		-ms-transform-origin: 50% 50%;
-		transform-origin: 50% 50%;
-	}
-
-	.mobile-button span {
-		position: absolute;
-		width: 100%;
-		height: 3px;
-		left: 0;
-		top: 50%;
-		overflow: hidden;
-		text-indent: 200%;
-	}
-
-	.mobile-button:before {
-		-webkit-transform: translate3d(0,-7px,0);
-		-moz-transform: translate3d(0,-7px,0);
-		transform: translate3d(0,-7px,0);
-	}
-
-	.mobile-button:after {
-		-webkit-transform: translate3d(0,7px,0);
-		-moz-transform: translate3d(0,7px,0);
-		transform: translate3d(0,7px,0);
-	}
-
-	.mobile-button.active span {
-		opacity: 0;
-	}
-
-	.mobile-button.active:before {
-		-webkit-transform: rotate3d(0, 0, 1, 45deg);
-		-moz-transform: rotate3d(0, 0, 1, 45deg);
-		transform: rotate3d(0, 0, 1, 45deg);
-	}
-
-	.mobile-button.active:after {
-		-webkit-transform: rotate3d(0, 0, 1, -45deg);
-		-moz-transform: rotate3d(0, 0, 1, -45deg);
-		transform: rotate3d(0, 0, 1, -45deg);
-	}
+.mobile-button { display: none; float: right; position: relative; background: transparent; cursor: pointer; margin-top: 8px; width: 26px; height: 16px; -webkit-transition: all ease .238s; -moz-transition: all ease .238s; transition: all ease .238s; }
+.mobile-button:before,
+.mobile-button:after, 
+.mobile-button span { background-color: #222; -webkit-transition: all ease .238s; -moz-transition: all ease .238s; transition: all ease .238s; }
+.mobile-button:before,
+.mobile-button:after { content: ''; position: absolute; top: 0; height: 3px; width: 100%; left: 0; top: 50%; -webkit-transform-origin: 50% 50%; -ms-transform-origin: 50% 50%; transform-origin: 50% 50%; }
+.mobile-button span { position: absolute; width: 100%; height: 3px; left: 0; top: 50%; overflow: hidden; text-indent: 200%; }
+.mobile-button:before { -webkit-transform: translate3d(0,-7px,0); -moz-transform: translate3d(0,-7px,0); transform: translate3d(0,-7px,0); }
+.mobile-button:after { -webkit-transform: translate3d(0,7px,0); -moz-transform: translate3d(0,7px,0); transform: translate3d(0,7px,0); }
+.mobile-button.active span { opacity: 0; }
+.mobile-button.active:before { -webkit-transform: rotate3d(0, 0, 1, 45deg); -moz-transform: rotate3d(0, 0, 1, 45deg); transform: rotate3d(0, 0, 1, 45deg); }
+.mobile-button.active:after { -webkit-transform: rotate3d(0, 0, 1, -45deg); -moz-transform: rotate3d(0, 0, 1, -45deg); transform: rotate3d(0, 0, 1, -45deg); }
 
 /* Featured Title
 -------------------------------------------------------------- */
@@ -1090,6 +891,13 @@ body.page #main-content { padding-top: 0; padding-bottom: 0; }
 
 /* Blog Post
 -------------------------------------------------------------- */
+.desc{
+	height: 80px;
+}
+.wrappers{
+	height: 50px;
+	overflow: hidden;
+}
 .hentry { margin-top: 60px; }
 .hentry:first-child { margin-top: 0; }
 .hentry .post-content-wrap,
@@ -1097,7 +905,7 @@ body.page #main-content { padding-top: 0; padding-bottom: 0; }
 
 /* Post media */
 .post-media { margin-bottom: 25px; position: relative; }
-.hentry .post-media img { width: 100%; height: auto; }
+.hentry .post-media img { max-width: 50%; height: auto; }
 .hentry .post-media iframe { margin-bottom: 0; }
 
 /* Post title */
@@ -1336,7 +1144,15 @@ body.page #main-content { padding-top: 0; padding-bottom: 0; }
        -moz-transform: translate3d(0,-50%,0);
             transform: translate3d(0,-50%,0);
 }
+.service-item .thumb{
+	max-height: 300px;
+	width: 100%;
+}
 
+.service-item .thumb img{
+	width: 100%;
+	height: 300px;
+}
 /* Widget Recent News  */
 #sidebar .widget.widget_recent_news ul li,
 #footer-widgets .widget.widget_recent_news ul li { padding: 0; border: 0; padding-top: 18px; margin-top: 18px; border-top: 1px solid #eaeaea; }
@@ -1645,8 +1461,28 @@ body.page #main-content { padding-top: 0; padding-bottom: 0; }
 	opacity: 1;
 	visibility: visible;
 	bottom: 45px;
+	border: 1px solid black;
 }
 
+.langu li a {
+	color: #fff;
+}
+.langu li{
+	margin-top:12px !important;
+}
+@media only screen and (max-width: 990px){
+	
+	.langu li a{
+		text-align:center;
+		margin-left: 20px;
+	}
+	.wprt-section{
+		margin-top:30px;
+	}
+	#content-wrap{
+		margin-top: 50px;
+	}
+}
 /* Media Queries
 -------------------------------------------------------------- */
 @media only screen and (min-width: 1930px) {
@@ -1706,9 +1542,7 @@ body.page #main-content { padding-top: 0; padding-bottom: 0; }
 	#site-header #site-header-inner,
 	#site-header.style-2 #site-header-inner,
 	#site-header.style-3 #site-header-inner,
-	#site-header.style-4 #site-header-inner {
-		padding-top: 15px;
-		padding-bottom: 46px;}
+	#site-header.style-4 #site-header-inner { padding-top: 15px; padding-bottom: 46px; }
 	#site-header.style-2 #site-logo { margin-top: 0; }
 	#site-header.style-4 #site-logo { text-align: left; float: left; }
 	.hentry { margin-top: 40px; }
