--- a/ConstructionSite/wwwroot/assets/css/shortcodes.css
+++ b/ConstructionSite/wwwroot/assets/css/shortcodes.css
@@ -1736,21 +1736,10 @@
 }
 
 .project-item .effect-zoe p {
-    text-transform: uppercase;
-}
-
-.project-item .effect-zoe p {
-    float: left;
-    color: black;
+    float: right;
+    color: #ffc925;
     display: inline-block;
 }
-
-    .project-item .effect-zoe p:hover {
-        float: left;
-        color: #ffc925;
-        text-decoration: underline #ffc925;
-        display: inline-block;
-    }
 
 .project-item .effect-zoe:hover p.icon-links a:hover,
 .project-item .effect-zoe:hover p.icon-links a:focus {
