Css problemleri hell olundu

--- a/ConstructionSite/Views/Shared/Components/Portfolio/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/Portfolio/Default.cshtml
@@ -31,7 +31,7 @@
                 </div>
             }
         </div>
-        <div id="grid-container">
+        <div id="grid-container" class="container-fluid">
         </div>
     </div>
 </section>
