--- a/ConstructionSite/Views/Shared/_HeaderPartial.cshtml
+++ b/ConstructionSite/Views/Shared/_HeaderPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿<header id="site-header" class="header-front-page style-5">
-    <div id="site-header-inner" class="container" style="padding: 18px 15px;">
+    <div id="site-header-inner" class="container">
         <div class="wrap-inner">
             <div id="site-logo" class="clearfix" style="width: 50%;display: inline-block;">
                 <div id="site-logo-inner">
