--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
     </div>
     <!-- /#wrapper -->
 
-    <a id="scroll-top"><i class="fa fa-arrow-up" style="font-size: 1.9em; margin-top: 22%; border: 1px solid #ffc925"></i></a>
+    <a id="scroll-top"><i class="fa fa-arrow-up" style="font-size: 1.9em; margin-top: 22%;"></i></a>
 
     <!-- Javascript -->
     <partial name="_JavascriptPartial" />
