Portfolio/Indexdeki problem hell olundu

--- a/ConstructionSite/Views/Portfolio/Index.cshtml
+++ b/ConstructionSite/Views/Portfolio/Index.cshtml
@@ -34,7 +34,7 @@
                 </div>
             }
         </div>
-        <div id="grid-container">
+        <div id="grid-container" class="container-fluid">
         </div>
     </div>
 </section>
