Header hissesini yeniden elave etdim

--- a/ConstructionSite/Views/Shared/_HeaderPartial.cshtml
+++ b/ConstructionSite/Views/Shared/_HeaderPartial.cshtml
@@ -1,17 +1,32 @@
 ﻿<header id="site-header" class="header-front-page style-5">
     <div id="site-header-inner" class="container">
         <div class="wrap-inner">
-            <div id="site-logo" class="clearfix" style="width: 50%;display: inline-block;">
+            <div id="site-logo" class="clearfix">
                 <div id="site-logo-inner">
                     <a asp-controller="Home" asp-action="Index" title="Construction" rel="home" class="main-logo">
-                        <img src="~/Assets/Img/logo-light.png" alt="Construction" data-width="204" data-height="30" style="position: absolute; width: 120px; height: 100px; top: -11px;  background-color: white;">
+                        <img src="~/Assets/Img/logo-light.png" alt="Construction" data-retina="assets/img/logo-light.png" data-width="204" data-height="30" style=" position: absolute; width: 120px; height: 100px; top: -15px; background-color: white;">
                     </a>
                 </div>
             </div>
+            <!-- /#site-logo -->
 
             <div class="mobile-button"><span></span></div>
+            <!-- //mobile menu button -->
 
             <partial name="_MainnavPartial" />
+
+       
         </div>
-    </div>
+        <!-- /#site-header-inner -->
+
 </header>
+<!-- /#site-header -->
+
+
+
+
+
+
+
+
+
