--- a/ConstructionSite/wwwroot/style.css
+++ b/ConstructionSite/wwwroot/style.css
@@ -4127,6 +4127,10 @@ body.page #main-content {
 
 /* Scroll Top
 -------------------------------------------------------------- */
+.bground {
+	background-color: #f7f7f7;
+}
+
 #scroll-top {
 	position: fixed !important;
 	right: 25px;
@@ -4163,19 +4167,25 @@ body.page #main-content {
 		border: 1px solid black;
 	}
 
-.langu li a {
-	color: #fff;
+.langu {
+	display: flex;
+	justify-content: center;
 }
 
-.langu li {
-	margin-top: 12px !important;
-}
+	.langu li a {
+		color: #fff;
+	}
+
+	.langu li {
+		margin-top: 12px !important;
+	}
 
 @media only screen and (max-width: 990px) {
 
 	.langu li a {
 		text-align: center;
 		margin-left: 20px;
+		color: #777;
 	}
 
 	.wprt-section {
