Blog/Index tamamdir

--- a/ConstructionSite/Views/Blog/Index.cshtml
+++ b/ConstructionSite/Views/Blog/Index.cshtml
@@ -40,3 +40,5 @@
     <!-- /#main-content -->
 
     <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40"></div>
+    </div>
+</div>
