Portfolio/Index-deki boshluqlari tenzimledim

--- a/ConstructionSite/Views/Portfolio/Index.cshtml
+++ b/ConstructionSite/Views/Portfolio/Index.cshtml
@@ -7,9 +7,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40" style="height:100px"></div>
-                <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40" style="height:100px"></div>
-                <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40" style="height:100px"></div>
+                <div class="wprt-spacer" data-desktop="100" data-mobi="100" data-smobi="100"></div>
                 <h2 class="text-center margin-bottom-20">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Portfolio)</h2>
                 <div class="wprt-lines style-2 custom-1">
                     <div class="line-1"></div>
@@ -17,8 +15,10 @@
                 <div class="wprt-spacer" data-desktop="36" data-mobi="30" data-smobi="30"></div>
             </div>
             <!-- /.col-md-12 -->
+
         </div>
         <!-- /.row -->
+
     </div>
     <!-- /.container -->
 
