--- a/ConstructionSite/wwwroot/style.css
+++ b/ConstructionSite/wwwroot/style.css
@@ -1,5 +1,5 @@
 
-/**
+/**.langu li a 
  * Theme Name: Construction - Ultimate Construction Template
  * Version: 1.0
  * Description: HTML5 Template for Construction and Building Company
@@ -4172,9 +4172,9 @@ body.page #main-content {
 	justify-content: center;
 }
 
-	.langu li a {
+	/*.langu li a {
 		color: #fff;
-	}
+	}*/
 
 	.langu li {
 		margin-top: 12px !important;
