--- a/ConstructionSite/Views/Blog/Detail.cshtml
+++ b/ConstructionSite/Views/Blog/Detail.cshtml
@@ -31,6 +31,7 @@
             <!-- /#site-content -->
 
         </div>
+        </div>
         <!-- /#main-content -->
 
         <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40"></div>
