--- a/ConstructionSite/Views/Blog/Index.cshtml
+++ b/ConstructionSite/Views/Blog/Index.cshtml
@@ -28,7 +28,7 @@
                         <!-- /.post-meta -->
 
                         <img src="@item.Imagepath" alt="logo" style="width:400px;height:250px;margin-right:15px; float: left;">
-                        <p>@item.Content</p>
+                        <p blog-content="@item.Content" ></p>
                     </div>
                 </div>
                 <!-- /.inner-content-wrap -->
