--- a/ConstructionSite/Views/Blog/Index.cshtml
+++ b/ConstructionSite/Views/Blog/Index.cshtml
@@ -15,7 +15,7 @@
             {
                 <div class="hentry">
                     <div class="container">
-                        <h1>@item.Title</h1>
+                        <h1 blog-title="@item.Title"></h1>
                         <div class="post-meta style-3">
                             <div class="post-meta-content">
                                 <div class="post-meta-content-inner">
