--- a/ConstructionSite/Views/Services/Index.cshtml
+++ b/ConstructionSite/Views/Services/Index.cshtml
@@ -34,7 +34,7 @@
                                             <div class="thumb"><img class="sekil" src="@item.image" width="370" height="300"></div>
                                             <div class="service-item-wrap">
                                                 <h3 class="title font-size-18"><a href="service-Construction.html">@item.Name</a></h3>
-                                                <p indextext="@item.Tittle"></p>
+                                                <p service-index="@item.Tittle"></p>
                                                 <a asp-controller="Services" asp-action="Services" asp-route-id="@item.Id" class="wprt-button small rounded-3px">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.ReadMore)</a>
                                             </div>
                                         </div>
