--- a/ConstructionSite/wwwroot/style.css
+++ b/ConstructionSite/wwwroot/style.css
@@ -734,10 +734,102 @@ color: #252525; font-family: "Montserrat", sans-serif; font-size: 1.071em; font-
 #site-header.style-4 .nav-top-cart-wrapper { position: relative; display: inline-block; transform: none; padding-left: 12px; }
 
 /* Header Style 5 */
-.header-style-5 #site-header { background-color: transparent !important; }
+.header-style-5 #site-header {
+	background-color: transparent !important;
+	width: 100% !important;
+	height: 87px !important;
+}
 .header-style-5 #site-header-wrap { position: absolute; left: 0; top: 0; width: 100%; z-index: 999; }
 #site-header.style-5:after { content: ""; position: absolute; left: 0; top: 0; width: 100%; height: 100%; background-color: #000; filter: alpha(opacity=20); opacity: 0.2; z-index: -1; -webkit-transition: all ease .238s; -moz-transition: all ease .238s; transition: all ease .238s; }
 #site-header.style-5 .mobile-button:before, #site-header.style-5 .mobile-button:after, #site-header.style-5 .mobile-button span { background-color: #fff; }
+/*Language*/
+.select {
+	position: relative;
+	margin-bottom: 15px;
+	width: 60px;
+}
+
+	.select .selectBtn {
+		background: var(--bg1);
+		padding: 10px;
+		box-sizing: border-box;
+		border-radius: 3px;
+		width: 100%;
+		cursor: pointer;
+		position: relative;
+		-webkit-user-select: none;
+		-moz-user-select: none;
+		-ms-user-select: none;
+		user-select: none;
+		background: #fff;
+	}
+
+		.select .selectBtn:after {
+			content: "";
+			position: absolute;
+			top: 45%;
+			right: 15px;
+			width: 6px;
+			height: 6px;
+			-webkit-transform: translateY(-50%) rotate(45deg);
+			transform: translateY(-50%) rotate(45deg);
+			border-right: 2px solid #666;
+			border-bottom: 2px solid #666;
+			transition: 0.2s ease;
+		}
+
+		.select .selectBtn.toggle {
+			border-radius: 3px 3px 0 0;
+		}
+
+			.select .selectBtn.toggle:after {
+				-webkit-transform: translateY(-50%) rotate(-135deg);
+				transform: translateY(-50%) rotate(-135deg);
+			}
+
+	.select .selectDropdown {
+		position: absolute;
+		top: 100%;
+		width: 100%;
+		border-radius: 0 0 3px 3px;
+		overflow: hidden;
+		background: var(--bg1);
+		border-top: 1px solid #eee;
+		z-index: 1;
+		background: #fff;
+		-webkit-transform: scale(1, 0);
+		transform: scale(1, 0);
+		-webkit-transform-origin: top center;
+		transform-origin: top center;
+		visibility: hidden;
+		transition: 0.2s ease;
+		box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
+	}
+
+		.select .selectDropdown .option {
+			padding: 10px;
+			box-sizing: border-box;
+			cursor: pointer;
+		}
+
+			.select .selectDropdown .option:hover {
+				background: #f8f8f8;
+			}
+
+		.select .selectDropdown.toggle {
+			visibility: visible;
+			-webkit-transform: scale(1, 1);
+			transform: scale(1, 1);
+		}
+
+
+
+
+
+
+
+
+
 
 /* Navigation */
 #main-nav .menu-fallback { position: relative; color: #252525; text-decoration: underline; display: inline-block; height: 50px; line-height: 50px; }
