Created_Comming_Soon

--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                 <partial name="_HeaderPartial" />
                 <!-- /#site-header -->
             </div>
-
+            <h1>Comming Soon</h1>
             @RenderBody()
 
             <!-- Footer -->
