Admin panel deyishiklikleri

--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/Components/UserClaims/Default.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/Components/UserClaims/Default.cshtml
@@ -1,9 +1,9 @@
 ﻿@model UserDTO
 
-<div class="top-nav" style="padding-bottom: 56px;">
+<div class="top-nav">
     <ul class="nav pull-right top-menu">
         <button class="btn btn-secondary dropdown-toggle btn-hover" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="background-color: RGB(49, 49, 49); color: white;">
-            @Model.Name
+          <i class="fa fa-user fa-2x" style="margin-right:37px;"></i>
         </button>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" style="text-align: center; background-color: RGB(49, 49, 49); opacity: .8; margin-top: -1px;">
             <div>
