Finsihed_Data_For_me

--- a/ConstructionSite/Views/Home/Soon.cshtml
+++ b/ConstructionSite/Views/Home/Soon.cshtml
@@ -2,4 +2,19 @@
 @{ 
     Layout = null;
 }
-<h1>Comming Soon</h1>
+<style>
+    h1{
+        text-align:center;
+    }
+    .main{
+        background:#ffc529;
+        text-align:center;
+        width:100%;
+        height:100%;
+    }
+</style>
+<div class="main">
+    <h1>Tezlikle xidmetinizde</h1>
+    <p>office@pdc.az</p>
+    <p>050-899-01-10</p>
+</div>
