localizer-le yazdim ga;eryni

--- a/ConstructionSite/Views/Shared/_MainnavPartial.cshtml
+++ b/ConstructionSite/Views/Shared/_MainnavPartial.cshtml
@@ -25,7 +25,7 @@
         </li>
 
         <li><a asp-controller="Portfolio" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Portfolio)</a></li>
-        <li><a asp-controller="Galery" asp-action="Index">Qalereya</a></li>
+        <li><a asp-controller="Galery" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Galery)</a></li>
         <li><a asp-controller="Blog" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Blog)</a></li>
         <li><a asp-controller="Message" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Contact)</a></li>
 
