Areas-da da logonu deyishdim

--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_AdminLayout.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_AdminLayout.cshtml
@@ -54,7 +54,7 @@
         <header class="header white-bg my-Header" style="min-height:87px;background-color: RGB(49,49,49); box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);display:flex;justify-content:space-between;align-items:center">
             <!--logo start-->
             <a href="/home/index" title="Construction" rel="home" class="construction-logo">
-                <img src="~/Assets/Img/svg (1).svg" alt="Construction" data-retina="assets/img/logo-light.png" data-width="204" data-height="30" style="position: absolute;height: 77px;top:2px;left:40px">
+                <img src="~/Assets/Img/pdc.svg" alt="Construction" data-retina="assets/img/logo-light.png" data-width="204" data-height="30" style="position: absolute; height: 75px; top: 5px; left: 4%;">
             </a>
             <!--logo end-->
 
