Finsihed_Soon_File

--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -5,11 +5,12 @@
     <!-- Basic Page Needs -->
     <meta charset="UTF-8" />
 
-    <title>PDC.az</title>
+    <title>@ViewData["Title"]</title>
 
     <meta name="description" descriptions />
     <meta name="keywords" metapage />
     <meta name="author" content="PDC.az" />
+    <meta name="yandex-verification" content="6b4f86d4e9e888c0" />
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
