--- a/ConstructionSite/wwwroot/ConstructionAdmin/css/bootstrap-reset.css
+++ b/ConstructionSite/wwwroot/ConstructionAdmin/css/bootstrap-reset.css
@@ -112,9 +112,17 @@ a:hover {
 .form-control {
     border: 1px solid #e2e2e4;
     box-shadow: none;
-    color: #c2c2c2;
+    color: #222;
 }
-
+.sorting_disabled{
+    text-align:center;
+}
+.sorting {
+    text-align: center;
+}
+.common {
+    margin-top: 28px;
+}
 
 .form-control:focus, #focusedInput {
     border: 1px solid #517397;
